# GarbageCollector

./: CMakeLists.txt  gc_manager.h  gc_object.h  gc_root.h  test_main.cpp
src/: gc_manager.cpp  gc_manager.hpp  gc_object.cpp  gc_object.hpp  main.cpp
tests/: CMakeLists.txt  test_gc.cpp
